// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fragment with an unknown attribute should ignore the attribute 1`] = `
<DocumentFragment>
  <b>
    This is some text with a bold and unknown attribute
  </b>
</DocumentFragment>
`;

exports[`Fragment with bold and italic attributes should render text wrapped in bold and italic DOM elements 1`] = `
<DocumentFragment>
  <i>
    <b>
      This is some text with bold and italic attributes
    </b>
  </i>
</DocumentFragment>
`;

exports[`Fragment with bold attributes should render text wrapped in a bold DOM element 1`] = `
<DocumentFragment>
  <b>
    This is some text with bold attributes
  </b>
</DocumentFragment>
`;

exports[`Fragment with italic attributes should render text wrapped in an italic DOM element 1`] = `
<DocumentFragment>
  <i>
    This is some text with italic attributes
  </i>
</DocumentFragment>
`;

exports[`Fragment with no attributes should render just text 1`] = `
<DocumentFragment>
  This is some text with no attributes
</DocumentFragment>
`;
